Update 'u9ua7eviv-go' component image to: quay.io/rhtaptestqa/rhtap-qe:4633397f290bbd08b3c66b5ba78a52d75d9b714c@sha256:0ac9830ff54be1a6f09874b8e7b11d757af22722af908469a30a9cccc846a6a3

--- a/components/u9ua7eviv-go/overlays/development/deployment-patch.yaml
+++ b/components/u9ua7eviv-go/overlays/development/deployment-patch.yaml
@@ -1,16 +1,16 @@
 apiVersion: apps/v1
 kind: Deployment
-metadata:   
-  annotations:  
+metadata:
+  annotations:
     tad.gitops.set/image: ".spec.template.spec.containers[0].image"
     tad.gitops.get/image: ".spec.template.spec.containers[0].image"
     tad.gitops.set/replicas: ".spec.replicas"
-    tad.gitops.get/replicas: ".spec.replicas" 
+    tad.gitops.get/replicas: ".spec.replicas"
   name: u9ua7eviv-go
 spec:
-  replicas: 1 
-  template: 
+  replicas: 1
+  template:
     spec:
       containers:
-      - image: quay.io/redhat-appstudio/dance-bootstrap-app:latest
-        name: container-image  
+        - image: quay.io/rhtaptestqa/rhtap-qe:4633397f290bbd08b3c66b5ba78a52d75d9b714c@sha256:0ac9830ff54be1a6f09874b8e7b11d757af22722af908469a30a9cccc846a6a3
+          name: container-image
